--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -12,10 +12,12 @@
 	<div class="form-row">
 		<label for="node-input-tagName"><i class="fa fa-tags""></i> <span>Name</span></label>
 		<input type="text" id="node-input-tagName" placeholder="Enter name (required)">
+		<input type="hidden" id="node-input-tagNameType">
 	</div>
 	<div class="form-row">
 		<label for="node-input-tagDescription"><i class="fa fa-tags""></i> <span>Description</span></label>
 		<input type="text" id="node-input-tagDescription" placeholder="Enter description (optional)">
+		<input type="hidden" id="node-input-tagDescriptionType">
 	</div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
@@ -87,14 +89,26 @@
 		color: '#F2F2F2',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
-			name: { value: '' },
-			tagId: {
+			tagName: {
 				value: '',
+				required: true,
+				validate: RED.validators.typedInput('tagNameType')
+			},
+			tagNameType: {
+				value: 'str'
+			},
+			tagDescription: {
+				value: '',
+				required: true,
+				validate: RED.validators.typedInput('tagDescriptionType')
+			},
+			tagDescriptionType: {
+				value: 'str'
+			},
+			tagId: {
+				value: 0,
 				validate: RED.validators.number()
 			},
-			//tagName is used to avoid conflict with the Node-RED core name property
-			tagName: { value: '' },
-			tagDescription: { value: '' },
 		},
 		inputs: 1,
 		outputs: 1,
@@ -104,11 +118,13 @@
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags');
+			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/update');
+			// Initialize typedInput for both tagName and tagDescription with default values
+			ktInitializeTypedInput("#node-input-tagName", "#node-input-tagNameType");
+			ktInitializeTypedInput("#node-input-tagDescription", "#node-input-tagDescriptionType");
 		},
-		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
-			this.tagId = Number($('#node-input-tagId').val()); // Save the selected tagId
+			this.tagId = Number($('#node-input-tagId').val());
 		}
 	});
 </script>
