--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -92,7 +92,7 @@
 			return this.name || 'KlickTipp Subscriber Search';
 		},
 		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType");
+			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
 	});
 </script>
