--- a/nodes/klicktipp-unsubscribe.html
+++ b/nodes/klicktipp-unsubscribe.html
@@ -93,7 +93,7 @@
 			return this.name || 'KlickTipp Unsubscribe';
 		},
 		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType");
+			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
 	});
 </script>
