--- a/nodes/klicktipp-signin.html
+++ b/nodes/klicktipp-signin.html
@@ -18,7 +18,12 @@
 	    <input type="text" id="node-input-smsNumber" placeholder="Enter SMS number (optional)">
 	    <input type="hidden" id="node-input-smsNumberType">
 	</div>
-	<div id="contact-fields-section"></div>
+	<div class="form-row">
+	    <label for="node-input-fields"><i class="fa fa-mobile"></i> <span>Contact fields</span></label>
+	    <input type="text" id="node-input-fields" placeholder="Contact fields">
+	    <input type="hidden" id="node-input-fieldsType">
+	</div>
+	<div id="contact-fields-section" class="form-row"></div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -103,6 +108,13 @@
 			},
 			fields: {
 				value: {},
+				validate: RED.validators.typedInput('fieldsType')
+			},
+			fieldsType: {
+				value: 'json'
+			},
+			fieldsData: {
+				value: {}
 			},
 			name: { value: '' },
 		},
@@ -114,19 +126,35 @@
 		},
 		oneditprepare: function() {
 			const contactListContainer = $('#contact-fields-section');
-			ktPopulateContactFields(contactListContainer, this.fields, '/klicktipp/signin/contact-fields');
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType");
-			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType");
-			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType");
-		},
-		// When the node editor is saved, capture the selected tagId
-		oneditsave: function() {
-			// Collect all field values and store them in this.fields
-			this.fields = {};
-			$('#contact-fields-section input').each((index, element) => {
-				const fieldId = $(element).attr('id').replace('node-input-', '');
-				this.fields[fieldId] = $(element).val();
+			const fieldsInput = $("#node-input-fields");
+
+			const customContactFieldsType = {
+				value: "fieldsFromApi",
+				label: "Contact fields list",
+				icon: "fa fa-cog",
+				hasValue: false
+			}
+
+			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
+			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
+			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
+
+			ktInitializeCustomTypedInput("#node-input-fields", "#node-input-fieldsType", 'json', ['json', customContactFieldsType]);
+
+			$(fieldsInput).on("change", (event, type) => {
+				if (type === "fieldsFromApi") {
+					// Show the contact fields section and populate the fields from the API
+					contactListContainer.show();
+					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/contact-fields/signin-node');
+				} else {
+					// Hide the contact fields section for other types
+					contactListContainer.hide();
+				}
 			});
+		},
+		oneditsave: function() {
+			ktStoreContactFields();
 		}
 	});
 </script>
