--- a/nodes/klicktipp-signout.html
+++ b/nodes/klicktipp-signout.html
@@ -93,8 +93,8 @@
 			return this.name || 'KlickTipp Signout';
 		},
 		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType");
-			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType");
+			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
 		},
 	});
 </script>
