--- a/nodes/klicktipp-subscribe.html
+++ b/nodes/klicktipp-subscribe.html
@@ -25,7 +25,12 @@
             <!-- Tags will be populated here -->
         </select>
     </div>
-	<div id="contact-fields-section"></div>
+	<div class="form-row">
+	    <label for="node-input-fields"><i class="fa fa-mobile"></i> <span>Contact fields</span></label>
+	    <input type="text" id="node-input-fields" placeholder="Contact fields">
+	    <input type="hidden" id="node-input-fieldsType">
+	</div>
+	<div id="contact-fields-section" class="form-row"></div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -118,7 +123,16 @@
 				value: '',
 				validate: RED.validators.number()
 			},
-			fields: { value: {} }
+			fields: {
+				value: {},
+				validate: RED.validators.typedInput('fieldsType')
+			},
+			fieldsType: {
+				value: 'json'
+			},
+			fieldsData: {
+				value: {}
+			},
 		},
 		inputs: 1,
 		outputs: 1,
@@ -130,13 +144,33 @@
 			const tagDropdown = $('#node-input-tagId');
 			const listIdDropdown = $('#node-input-listId');
 			const contactListContainer = $('#contact-fields-section');
+			const fieldsInput = $("#node-input-fields");
 
-			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags');
-			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process');
-			ktPopulateContactFields(contactListContainer, this.fields, '/klicktipp/subscribe/contact-fields');
+			const customContactFieldsType = {
+				value: "fieldsFromApi",
+				label: "Contact fields list",
+				icon: "fa fa-cog",
+				hasValue: false
+			}
 
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType");
-			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType");
+			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscribe-node');
+			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/subscribe-node');
+			ktPopulateContactFields(contactListContainer, this.fields, '/klicktipp/contact-fields/subscribe-node');
+
+			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
+			ktInitializeCustomTypedInput("#node-input-fields", "#node-input-fieldsType", 'json', ['json', customContactFieldsType]);
+
+			$(fieldsInput).on("change", (event, type) => {
+				if (type === "fieldsFromApi") {
+					// Show the contact fields section and populate the fields from the API
+					contactListContainer.show();
+					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/signin/contact-fields');
+				} else {
+					// Hide the contact fields section for other types
+					contactListContainer.hide();
+				}
+			});
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
