--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -92,7 +92,7 @@
 			return this.name || 'KlickTipp Subscriber Get';
 		},
 		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['msg', 'flow', 'global', 'num', 'jsonata', 'env']);
+			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
 		},
 	});
 </script>
