--- a/nodes/klicktipp-tag-get.html
+++ b/nodes/klicktipp-tag-get.html
@@ -90,7 +90,7 @@
 		},
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/get');
+			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/get-tag-node');
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
