--- a/nodes/klicktipp-subscribe.html
+++ b/nodes/klicktipp-subscribe.html
@@ -26,11 +26,11 @@
         </select>
     </div>
 	<div class="form-row">
-	    <label for="node-input-fields"><i class="fa fa-mobile"></i> <span>Contact fields</span></label>
+	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Contact fields</span></label>
 	    <input type="text" id="node-input-fields" placeholder="Contact fields">
 	    <input type="hidden" id="node-input-fieldsType">
 	</div>
-	<div id="contact-fields-section" class="form-row"></div>
+	<div id="contact-fields-section" class="form-row" style="display: none"></div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -124,11 +124,14 @@
 				validate: RED.validators.number()
 			},
 			fields: {
-				value: {},
-				validate: RED.validators.typedInput('fieldsType')
+				value: '',
+				validate: function(v) {
+					// Allow empty values
+					return (v === '' || v === undefined || RED.validators.typedInput('fieldsType')(v));
+				}
 			},
 			fieldsType: {
-				value: 'json'
+				value: 'msg'
 			},
 			fieldsData: {
 				value: {}
@@ -155,17 +158,16 @@
 
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscribe-node');
 			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/subscribe-node');
-			ktPopulateContactFields(contactListContainer, this.fields, '/klicktipp/contact-fields/subscribe-node');
 
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
-			ktInitializeCustomTypedInput("#node-input-fields", "#node-input-fieldsType", 'json', ['json', customContactFieldsType]);
+			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', customContactFieldsType]);
 
 			$(fieldsInput).on("change", (event, type) => {
 				if (type === "fieldsFromApi") {
 					// Show the contact fields section and populate the fields from the API
 					contactListContainer.show();
-					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/signin/contact-fields');
+					ktPopulateContactFields(contactListContainer, this.fieldsData,'/klicktipp/contact-fields/subscribe-node');
 				} else {
 					// Hide the contact fields section for other types
 					contactListContainer.hide();
