--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -19,11 +19,11 @@
 	    <input type="hidden" id="node-input-newSmsNumberType">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-fields"><i class="fa fa-mobile"></i> <span>Contact fields</span></label>
+	    <label for="node-input-fields"><i class="fa fa-list"></i> <span>Contact fields</span></label>
 	    <input type="text" id="node-input-fields" placeholder="Contact fields">
 	    <input type="hidden" id="node-input-fieldsType">
 	</div>
-	<div id="contact-fields-section" class="form-row"></div>
+	<div id="contact-fields-section" class="form-row" style="display: none"></div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -120,11 +120,14 @@
 				value: 'str'
 			},
 			fields: {
-				value: {},
-				validate: RED.validators.typedInput('fieldsType')
+				value: '',
+				validate: function(v) {
+					// Allow empty values
+					return (v === '' || v === undefined || RED.validators.typedInput('fieldsType')(v));
+				}
 			},
 			fieldsType: {
-				value: 'json'
+				value: 'msg'
 			},
 			fieldsData: {
 				value: {}
@@ -147,18 +150,16 @@
 				hasValue: false
 			}
 
-			ktPopulateContactFields(contactListContainer, this.fields, '/klicktipp/contact-fields/update-subscriber-node');
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
 			ktInitializeTypedInput("#node-input-newEmail", "#node-input-newEmailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-newSmsNumber", "#node-input-newSmsNumberType", 'str', ['str']);
-
-			ktInitializeCustomTypedInput("#node-input-fields", "#node-input-fieldsType", 'json', ['json', customContactFieldsType]);
+			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', customContactFieldsType]);
 
 			$(fieldsInput).on("change", (event, type) => {
 				if (type === "fieldsFromApi") {
 					// Show the contact fields section and populate the fields from the API
 					contactListContainer.show();
-					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/signin/contact-fields');
+					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/contact-fields/update-subscriber-node');
 				} else {
 					// Hide the contact fields section for other types
 					contactListContainer.hide();
